--- a/BE/.env.example
+++ b/BE/.env.example
@@ -56,3 +56,15 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+## Articles API Keys & URLs
+NEWS_API_URL='https://newsapi.org/v2/'
+NEWS_API_KEY='f602dbe416b94ace89b431003130e284'
+
+NYT_API_URL='https://api.nytimes.com/svc/search/v2/'
+NYT_API_KEY='hHjTK6RVLMr0JJoudVD3xgHMQvsKKybP'
+NYT_API_KEY_SECRET='rxB96Dxg8zZQVdZw'
+
+GUARDIAN_API_URL='https://content.guardianapis.com/'
+GUARDIAN_API_KEY='1d38c041-a66c-495f-8af5-62b96f9a2a1d'
