Fix docker issues

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_DATABASE='news-aggregator'
+DB_DATABASE=news
 DB_USERNAME=test
 DB_PASSWORD=Test123
-MYSQL_DATA=/var/lib/mysql
+MYSQL_DATA=./docker/mysql/data
