--- a/BE/Dockerfile
+++ b/BE/Dockerfile
@@ -1,68 +1,48 @@
 FROM php:8.2-apache
 
-
-#
-#RUN touch /var/log/cron.log
-
-RUN adduser newsagg --uid 1000
-
-
 WORKDIR /var/www/html
 
-COPY ./ /var/www/html
+RUN usermod -u 1000 www-data && groupmod -g 1000 www-data
+
+
+# Copy custom apache2 config
 COPY docker/apache/httpd.conf /etc/apache2/sites-enabled/000-default.conf
 COPY docker/apache/ports.conf /etc/apache2/ports.conf
 
-RUN apt-get update && apt-get install bash
-
-RUN apt-get update && \
-    apt-get install -y libzip-dev zip && \
-    apt-get install -y default-mysql-client  && \
-    apt-get install -y supervisor cron   && \
-    docker-php-ext-install pdo_mysql && \
-    docker-php-ext-install zip && \
-    a2enmod rewrite
-
-RUN chmod 755 /var/run && \
-    mkdir -p /var/log/supervisor && \
-    chmod -R 755 /var/log/supervisor && \
-    chown -R newsagg:newsagg /var/log/supervisor
+# Install important libraries/packages
+RUN apt-get update -y && apt-get install -y \
+    zip unzip \
+    libzip-dev \
+    supervisor default-mysql-client \
+    && docker-php-ext-install zip pdo_mysql \
+    && a2enmod rewrite
 
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN composer install --no-dev
+# Make sure www-data user can access apache2 logs
+RUN mkdir -p /var/log/apache2 && \
+    chown -R www-data:www-data /var/log/apache2 && \
+    chmod -R 755 /var/log/apache2
 
-#RUN echo "* * * * * www-data php /var/www/html/artisan schedule:run >> /var/log/cron.log 2>&1" >> /etc/crontab
 COPY docker/supervisor/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY . .
 
-
-
+# Make sure ownership is correct for copied files in frontend
 RUN chown -R www-data:www-data /var/www/html && \
     chmod -R 755 /var/www/html/storage && \
     chmod -R 755 /var/www/html/bootstrap/cache
 
-
-RUN php artisan storage:link
-RUN php artisan optimize:clear
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 
-
-# Create an empty supervisord.log file
-RUN touch /var/log/supervisor/supervisord.log && \
-    chown newsagg:newsagg /var/log/supervisor/supervisord.log && \
-    chmod 755 /var/log/supervisor/supervisord.log
-
-
+# Create log directories that are needed by supervisor
 RUN mkdir /var/log/supervisor/apache2 && \
-    mkdir /var/log/supervisor/app-schedule
-
-    # Create an empty supervisord.log file
-RUN chown newsagg:newsagg -R /var/log/supervisor && \
+    mkdir /var/log/supervisor/app-schedule && \
+    chown www-data:www-data -R /var/log/supervisor && \
     chmod 755 -R /var/log/supervisor
 
 
-#CMD cron -f && apache2ctl -D FOREGROUND
-# Start supervisord
-RUN echo "Starting!"
-CMD supervisord -c /etc/supervisor/conf.d/supervisord.conf
+
+# Entrypoint that does composer install and starts supervisor
 EXPOSE 8000
+RUN chmod +x "docker/entrypoint.sh"
+ENTRYPOINT ["sh", "docker/entrypoint.sh"]
