--- a/BE/docker/supervisor/supervisord.conf
+++ b/BE/docker/supervisor/supervisord.conf
@@ -1,5 +1,7 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+pidfile=/var/run/supervisord.pid
 
 [program:apache2]
 process_name=%(program_name)s_%(process_num)02d
