--- a/FE/package.json
+++ b/FE/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.11.0",
@@ -16,7 +17,9 @@
     "react-hook-form": "^7.43.9",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
+    "run": "^1.4.0",
     "sass": "^1.60.0",
+    "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
