--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
   #Database
   db:
     image: mysql:8.0.35
-#    platform: linux/x86_64
     restart: unless-stopped
     container_name: db
     tty: true
@@ -14,7 +13,7 @@ services:
       MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
       MYSQL_ROOT_HOST: "%" ##TODO: Check appropriate solution
     healthcheck:
-      test: [ "CMD", "mysqladmin" ,"ping"]
+      test: [ "CMD", "mysqladmin" ,"ping" ]
       timeout: 20s
       retries: 10
     volumes:
@@ -25,39 +24,30 @@ services:
       - app-network
   #Laravel App
   backend:
-    build:
-      context: ./BE
-      dockerfile: Dockerfile
-    environment:
-      DB_HOST: db
-      DB_DATABASE: news-aggregator
-      DB_USERNAME: test
-      DB_PASSWORD: Test123
-      DB_PORT: 3306
+    build: ./BE
+    container_name: news_backend_container
     ports:
       - "8000:8000"
-    user: "1000:1000"
-    volumes:
-      - ./BE:/var/www/html
     depends_on:
       - db
     networks:
       - app-network
+    volumes:
+      - ./BE:/var/www/html
   #React App
   frontend:
-    build:
-      context: ./FE
-      dockerfile: Dockerfile
+    build: ./FE
+    container_name: news_frontend_container
     tty: true
+    stdin_open: true
     ports:
       - "3000:3000"
-    volumes:
-      - ./FE:/app/frontend
     depends_on:
       - backend
     networks:
       - app-network
-
+    volumes:
+      - ./FE:/app
 networks:
   app-network:
     driver: bridge
