--- a/FE/package.json
+++ b/FE/package.json
@@ -20,7 +20,9 @@
     "run": "^1.4.0",
     "sass": "^1.60.0",
     "start": "^5.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-hot-toast": "^2.4.1",
+    "bootswatch": "^5.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
