--- a/BE/.env.example
+++ b/BE/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=News
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -58,13 +58,13 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-## Articles API Keys & URLs
+# ## Articles API Keys & URLs
 NEWS_API_URL='https://newsapi.org/v2/'
-NEWS_API_KEY='f602dbe416b94ace89b431003130e284'
+NEWS_API_KEY='2523ee31442b49aeb7aa8f4eb3534f79'
 
 NYT_API_URL='https://api.nytimes.com/svc/search/v2/'
-NYT_API_KEY='hHjTK6RVLMr0JJoudVD3xgHMQvsKKybP'
-NYT_API_KEY_SECRET='rxB96Dxg8zZQVdZw'
+NYT_API_KEY='Z7VsJJYcYC1qq4AAP2YbCls6PKzAdBXr'
+NYT_API_KEY_SECRET='OfMaiECikUZi7GRp'
 
 GUARDIAN_API_URL='https://content.guardianapis.com/'
-GUARDIAN_API_KEY='1d38c041-a66c-495f-8af5-62b96f9a2a1d'
+GUARDIAN_API_KEY='8616e293-f3ef-47ca-8e3a-00e442471009'
